--- a/RNRestaurantsByPostcode/package.json
+++ b/RNRestaurantsByPostcode/package.json
@@ -26,7 +26,8 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.13.1"
+    "react-test-renderer": "~16.13.1",
+    "react-native-testing-library": "~6.0.0"
   },
   "jest": {
     "preset": "react-native"
